# json

./: CMakeLists.txt  README.md
.github/external_ci/: appveyor.yml
.github/workflows/: check_amalgamation.yml  cifuzz.yml  clang-tidy-plugin.yml  codeql-analysis.yml  labeler.yml  scorecards.yml  ubuntu.yml
clang_tidy_plugin/: CMakeLists.txt  ModernizeNlohmannJsonExplicitConversionsCheck.cpp  ModernizeNlohmannJsonExplicitConversionsCheck.h  Module.cpp
cmake/: ci.cmake
cmake/requirements/: requirements-cppcheck.txt
docs/examples/: diagnostic_positions_exception.cpp  diagnostics_extended_positions.cpp  json_base_class_t.cpp
docs/mkdocs/: mkdocs.yml  requirements.txt
include/nlohmann/: json.hpp  ordered_map.hpp
include/nlohmann/detail/: exceptions.hpp  macro_scope.hpp
single_include/nlohmann/: json.hpp
tests/: CMakeLists.txt
tests/clang_tidy_plugin/: CMakeLists.txt  check_clang_tidy.py  modernize-nlohmann-json-explicit-conversions.cpp
tests/cmake_add_subdirectory/: CMakeLists.txt
tests/cmake_import/: CMakeLists.txt
tests/cmake_import_minver/: CMakeLists.txt
tests/cmake_target_include_directories/: CMakeLists.txt
tests/src/: unit-algorithms.cpp  unit-allocator.cpp  unit-alt-string.cpp  unit-class_parser.cpp  unit-comparison.cpp  unit-conversions.cpp  unit-custom-base-class.cpp  unit-diagnostic-positions-only.cpp  unit-diagnostic-positions.cpp  unit-element_access2.cpp  unit-precision.cpp  unit-regression2.cpp  unit-serialization.cpp  unit-udt_macro.cpp  unit-unicode2.cpp  unit-unicode3.cpp  unit-unicode4.cpp  unit-unicode5.cpp
(+31 files in other folders)
